main/assets/css/components/_icon_card.scss
// ++++++++++++++++++++
// ++ ICON CARDS ++
// ++++++++++++++++++++

.icon-cards {
    display: grid;
    grid-auto-flow: rows;
    gap: var(--space-xxxl);

    @include breakpoint(md) {
      grid-template-columns: repeat(3, 1fr);
      gap: var(--space-lg);
    }
  }

.icon-card {
  --header-text-gap: 5.5;
  text-align: center;
  display: grid;
  align-items: center;
  gap: 3.4375rem;

  .text-component {
    --text-vspace-multiplier: var(--header-text-gap); //controls vertical rhythm
  }

  &__icon {
    position: relative;
    --deg: 0deg;
  }

  &__icon::before {
    content: '';
    width: 100%;
    height: 100%;
    left: 0;
    position: absolute;
    background: url(../images/shared/desktop/bg-pattern-small-circle.svg) no-repeat;
    background-size: contain;
    background-position: center;
    transform: rotate(var(--deg));
  }

  &__icon--90 {
    --deg: -90deg;
  }

  &__icon--180 {
    --deg: 180deg;
  }

  &__title {
    text-transform: uppercase;
  }

}


 //display content horizontally for tablet screen sizes
  @include breakpoint(sm) {
  .icon-card.icon-card--horizontal\@sm {
      grid-auto-flow: column;
      text-align: left;

      .text-component {
        --text-vspace-multiplier: 3; //controls vertical rhythm
      }
    }
  }


 .icon-card,
 .icon-card.icon-card--horizontal\@sm {
   @include breakpoint(md) {
    text-align: center;
    grid-auto-flow: row;
  }

  .text-component {
    --text-vspace-multiplier: var(--header-text-gap);
  }
 }

